Fix overflowing left bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -138,6 +138,7 @@ body {
       }
 
       #sticker-pack-list {
+        min-height: 0;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
